--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,9 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="description" content="A simple recipes web application."/>
         <title>Recipe Site</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans|Roboto|Ubuntu|Ubuntu+Condensed" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" type="text/css" th:href="@{../assets/css/unsemantic-grid-responsive.css}"/>
-        <link rel="stylesheet" type="text/css" th:href="@{../assets/css/styles.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{../assets/css/mystyles.css}"/>
     </head>
 
 <body>
