TODO: Tests saving/deleting services - there are must be bugs (integrity) TODO: Urlencoding when creating new recipe / Check russian font

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,8 +77,8 @@
 
     </div> <!-- grid-100 -->
   </div> <!-- grid-container -->
-  <script src="https://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../assets/scripts/flashMessage.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+  <script src="../assets/scripts/flashMessage.js" type="text/javascript" charset="utf-8"></script>
   <script src="../assets/scripts/index.js" type="text/javascript" charset="utf-8"></script>
 </body>
 <div th:replace="layout :: footer"></div>
