--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -76,7 +76,7 @@
     </div> <!-- grid-100 -->
 </div> <!-- grid-container -->
 
-<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="../assets/scripts/flashMessage.js" type="text/javascript" charset="utf-8"></script>
 <script src="../assets/scripts/admin.js" type="text/javascript" charset="utf-8"></script>
 </body>
