--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -217,7 +217,7 @@
             </div> <!-- recipes -->
         </div> <!-- grid-100 -->
     </div> <!-- grid-container -->
-<script src="https://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="../assets/scripts/flashMessage.js" type="text/javascript" charset="utf-8"></script>
 <script src="../assets/scripts/openImageWindow.js" type="text/javascript" charset="utf-8"></script>
 <script src="../assets/scripts/toggleFavorite.js" type="text/javascript" charset="utf-8"></script>
