--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head th:fragment="head">
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta name="description" content="A simple recipes web application."/>
-        <title>Recipe Site</title>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans|Roboto|Ubuntu|Ubuntu+Condensed" rel="stylesheet" type="text/css"/>
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" type="text/css" th:href="@{../assets/css/unsemantic-grid-responsive.css}"/>
-        <link rel="stylesheet" type="text/css" th:href="@{../assets/css/mystyles.css}"/>
-    </head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="A simple recipes web application."/>
+    <title>Recipe Site</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans|Roboto|Ubuntu|Ubuntu+Condensed" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{../assets/css/unsemantic-grid-responsive.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{../assets/css/mystyles.css}"/>
+</head>
 
 <body>
 
@@ -19,6 +19,8 @@
     </header>
 
     <nav th:fragment="nav" class="nav">
+        <meta name="_csrf" th:content="${_csrf.token}"/>
+        <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
         <div class="nav>">
             <span sec:authorize="isAuthenticated()">
                 <a th:href="@{/profile}" th:text="${user.username}">Chris Ramazzotti</a>
