Save recipe.photo when saving recipe

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -194,7 +194,7 @@
   </div> <!-- grid-100 -->
 </div> <!-- grid-container -->
 
-<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<script src="../assets/vendor/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="../assets/scripts/toggleFavorite.js" type="text/javascript" charset="utf-8"></script>
 <script src="../assets/scripts/openImageWindow.js" type="text/javascript" charset="utf-8"></script>
 </body>
