--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="grid-20">
                 <div class="flush-right">
-                    <a th:href="@{/add}"><button>Add Recipe</button></a>
+                    <button type="button" onclick="addNewRecipe()">Add Recipe</button>
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
 
     </div> <!-- grid-100 -->
   </div> <!-- grid-container -->
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+  <script src="../assets/vendor/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="../assets/scripts/flashMessage.js" type="text/javascript" charset="utf-8"></script>
   <script src="../assets/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
   <script src="../assets/scripts/recipe.js" type="text/javascript" charset="utf-8"></script>
