--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,14 +22,21 @@
         <meta name="_csrf" th:content="${_csrf.token}"/>
         <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
         <div class="nav>">
-            <span sec:authorize="isAuthenticated()">
-                <a th:href="@{/profile}" th:text="${user.username}">Chris Ramazzotti</a>
-            </span>
-            &bullet;
-            <span>
-                <a sec:authorize="isAuthenticated()" th:href="@{/logout}">logout</a>
-                <a sec:authorize="isAnonymous()" th:href="@{/login}">login</a>
-            </span>
+            <p>
+                <span sec:authorize="isAuthenticated()">
+                    <a th:href="@{/admin}">admin panel</a>
+                </span>
+            </p>
+            <p>
+                <span sec:authorize="isAuthenticated()">
+                    <a th:href="@{/profile}" th:text="${user.username}">Chris Ramazzotti</a>
+                </span>
+                &bullet;
+                <span>
+                    <a sec:authorize="isAuthenticated()" th:href="@{/logout}">logout</a>
+                    <a sec:authorize="isAnonymous()" th:href="@{/login}">login</a>
+                </span>
+            </p>
         </div>
     </nav>
 
