Fixed bugs in index, edit modes. Fixed input date format. TODO next: tests

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -197,6 +197,7 @@
 <script src="../assets/vendor/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="../assets/scripts/recipe.js" type="text/javascript" charset="utf-8"></script>
 <script src="../assets/scripts/index.js" type="text/javascript" charset="utf-8"></script>
+<script src="../assets/scripts/flashMessage.js" type="text/javascript" charset="utf-8"></script>
 <script src="../assets/scripts/openImageWindow.js" type="text/javascript" charset="utf-8"></script>
 </body>
 <div th:replace="layout :: footer"></div>
