--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,83 +12,27 @@
           <p id="loggedUser" hidden="hidden" th:text="${user.username}"></p>
           <p id="loggedUserRole" hidden="hidden" th:text="${user.role.name}"></p>
           <div id="categoriesHere">
-              <p th:each="category, stat : ${allCategories}" th:id="@{'getCategoryNameById' + ${category.id}}" th:text="${category.name}" hidden="hidden"></p>
+              <div th:each="category, stat : ${allCategories}">
+                  <p th:id="@{'getCategoryNameById' + ${category.id}}" th:text="${category.name}" hidden="hidden"></p>
+                  <p th:id="@{'allCategoriesName' + ${stat.index}}" th:text="${category.name}" hidden="hidden"></p>
+                  <p th:id="@{'allCategoriesId' + ${stat.index}}" th:text="${category.id}" hidden="hidden"></p>
+              </div>
           </div>
+          <p id="selectedCategory" hidden="hidden">1</p>
+          <p id="pattern" hidden="hidden"></p>
+          <p id="method" hidden="hidden">in Description</p>
       </div>
 
-    <div id="root" class="grid-100">
+      <div id="root" class="grid-100">
+          <script src="../assets/vendor/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
+          <script src="../assets/scripts/flashMessage.js" type="text/javascript" charset="utf-8"></script>
+          <script src="../assets/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
+          <script src="../assets/scripts/recipe.js" type="text/javascript" charset="utf-8"></script>
+          <script src="../assets/scripts/index.js" type="text/javascript" charset="utf-8"></script>
+          <script>$.ready(indexPage());</script>
+      </div> <!-- grid-100 -->
 
-        <div class="grid-100 row controls">
-            <div class="grid-30">
-                <select id="selectCategory" th:field="${selectedCategory.id}" onchange="linkToSelectedCategory()">
-                    <option th:each="category : ${allCategories}" th:if="${category.id} != ${selectedCategory.id}" th:value="${category.id}" th:text="${category.name}">All Categories</option>
-                    <option th:each="category : ${allCategories}" th:if="${category.id} == ${selectedCategory.id}" th:value="${category.id}" th:text="${category.name}" selected="selected">All Categories</option>
-                </select>
-
-            </div>
-            <div class="grid-30" id="search-form">
-                <input type="text" id="searchRecipe" name="q" autocomplete="off" th:value="${pattern}" oninput="linkToPattern()"/>
-            </div>
-            <div class="grid-20">
-                <select id="searchMethod" th:value="${method}">
-                    <option th:if="${method == 'in Description'}" selected="selected">in Description</option>
-                    <option th:if="${method != 'in Description'}">in Description</option>
-                    <option th:if="${method == 'in Ingredient'}" selected="selected">in Ingredient</option>
-                    <option th:if="${method != 'in Ingredient'}">in Ingredient</option>
-                </select>
-            </div>
-            <div class="grid-20">
-                <div class="flush-right">
-                    <button type="button" onclick="addNewRecipe()">Add Recipe</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="grid-100">
-            <div class="recipes">
-                <div class="grid-100 row controls">
-                    <div class="grid-100">
-                        <h2> Recipes </h2>
-                    </div>
-                </div> <div class="clear"></div>
-
-                <div id="recipesList">
-                    <div th:id="@{'recipe#' + ${recipe.id}}" th:each="recipe, stat : ${recipes}" class="grid-100 row addHover">
-                        <a th:href="@{'/detail/' + ${recipe.id}}">
-                            <div class="grid-70">
-                                <p th:inline="text">
-                                    <span th:if="${recipesFavorites[__${stat.index}__]} == true"><img src="../assets/images/favorited.svg" height="12px"/></span>
-                                    <span th:if="${recipesFavorites[__${stat.index}__]} != true"><img src="../assets/images/favorite.svg" height="12px"/></span>
-                                    [[@{' ' + ${recipe.name}}]]
-                                </p>
-                            </div>
-                        </a>
-                        <div class="hoverBlock">
-                            <div class="grid-30">
-                                <div class="flush-right">
-                                    <p>
-                                        <a th:id="@{'editButton#' + ${recipe.id}}" href="#" class="button" onclick="editRecipe(this.id)"><img src="../assets/images/edit.svg" height="12px"/>Edit</a>
-                                        <a th:id="@{'deleteButton#' + ${recipe.id}}" href="#" class="button" onclick="deleteRecipe(this.id)"><img src="../assets/images/delete.svg" height="12px"/>Delete</a>
-                                        <p th:id="@{'recipeUser#' + ${recipe.id}}" th:text="${recipe.user.username}" hidden="hidden"/>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div> <div class="clear"></div>
-                </div>
-
-                <div class="row">&nbsp;</div>
-
-            </div> <!-- recipes -->
-        </div> <!-- grid-100 -->
-
-    </div> <!-- grid-100 -->
   </div> <!-- grid-container -->
-  <script src="../assets/vendor/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../assets/scripts/flashMessage.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../assets/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../assets/scripts/recipe.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../assets/scripts/index.js" type="text/javascript" charset="utf-8"></script>
 </body>
 <div th:replace="layout :: footer"></div>
 </html>
