--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -32,7 +32,7 @@
           </div><div class="clear"></div>
           <div class="prefix-20 grid-60 suffix-20">
               <p>
-                  <button onclick="submitForm()">Sign-up</button>
+                  <button type="button" onclick="submitForm()">Sign-up</button>
               </p>
           </div><div class="clear"></div>
 
