Fixed submit, not sure I'm right to let access any anonimous user to "/user" url  to do next: TESTS!

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -88,7 +88,12 @@
     </div>
 
     <footer th:fragment="footer">
-        <p>(c) Alexey Papin, 2016</p>
+        <p>
+            &copy; Alexey Papin, 2016 -
+            <a href="mailto: zzheads@gmail.com"><img src="../assets/images/email.png" height="14px" style="opacity:0.5;filter:alpha(opacity=50);"/> </a>
+            <a href="facebook.com/zzheads"><img src="../assets/images/facebook.png" height="14px" style="opacity:0.5;filter:alpha(opacity=50);"/> </a>
+            <a href="github.com/zzheads"><img src="../assets/images/github.png" height="14px" style="opacity:0.5;filter:alpha(opacity=50);"/> </a>
+        </p>
     </footer>
 
 </body>
