--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -90,9 +90,9 @@
     <footer th:fragment="footer">
         <p>
             &copy; Alexey Papin, 2016 -
-            <a href="mailto: zzheads@gmail.com"><img src="../assets/images/email.png" height="14px" style="opacity:0.5;filter:alpha(opacity=50);"/> </a>
-            <a href="facebook.com/zzheads"><img src="../assets/images/facebook.png" height="14px" style="opacity:0.5;filter:alpha(opacity=50);"/> </a>
-            <a href="github.com/zzheads"><img src="../assets/images/github.png" height="14px" style="opacity:0.5;filter:alpha(opacity=50);"/> </a>
+            <a href="mailto:zzheads@gmail.com?Subject=Recipe%20Site" target="_top"><img src="../assets/images/email.png" height="14px" style="opacity:0.5;filter:alpha(opacity=50);"/> </a>
+            <a href="http://www.facebook.com/zzheads"><img src="../assets/images/facebook.png" height="14px" style="opacity:0.5;filter:alpha(opacity=50);"/> </a>
+            <a href="https://github.com/zzheads"><img src="../assets/images/github.png" height="14px" style="opacity:0.5;filter:alpha(opacity=50);"/> </a>
         </p>
     </footer>
 
